# ucsd-cal

./: .gitignore  README.md  pyproject.toml
src/ucsd_cal/: ics.py  main.py  parser.py
