[project]
name = "ucsd-cal"
version = "0.1.0"
description = "Convert a UCSD class schedule into a Google Calendar ICS file"
requires-python = ">=3.10"
dependencies = [
    "icalendar>=7.1.2",
    "pyyaml>=6.0.3",
    "typer>=0.26.5",
]

[project.scripts]
ucsd-cal = "ucsd_cal.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ucsd_cal"]

[dependency-groups]
dev = [
    "hatchling>=1.29.0",
]
