[project]
name = "ucsd-cal"
version = "0.1.0"
description = "Convert a UCSD class schedule into a Google Calendar ICS file"
requires-python = ">=3.8"
dependencies = [
    "pyyaml>=6.0.3",
]

[project.scripts]
ucsd-cal = "ucsd_cal.main:main"

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
